# unstract-python-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  test.yml
docs/internal/: files-migration-plan.md
src/unstract/: cli.py
src/unstract/api_deployments/: __init__.py  api_client.py  api_deployments_client.py  client.py  utils.py
src/unstract/clone/: README.md  __init__.py  __main__.py  cli.py  client.py  context.py  exceptions.py  orchestrator.py  report.py  sharing.py  walker.py
src/unstract/clone/phases/: __init__.py  adapter.py  agentic_studio.py  base.py  (+12 more)
src/unstract/migration/: README.md  __init__.py  __main__.py  cli.py  client.py  context.py  exceptions.py  orchestrator.py  report.py  walker.py
src/unstract/prompt_studio/: __init__.py  client.py
tests/: README.md  client_test.py  sample.env  test_cli_top_level.py  test_prompt_studio.py  test_retry.py
tests/clone/: test_adapter_phase.py  test_agentic_studio_phase.py  test_api_deployment_phase.py  test_base_helpers.py  test_cli.py  test_client.py  test_cloud_phase_gating.py  test_connector_phase.py  test_custom_tool_phase.py  test_files_phase.py  test_group_phase.py  test_lookups_phase.py  test_manual_review_phase.py  test_orchestrator.py  test_phase_concurrency.py  test_pipeline_phase.py  test_remap_table.py  test_sharing.py  test_tag_phase.py  test_tool_instance_phase.py  test_walker.py  test_workflow_endpoint_phase.py  test_workflow_phase.py
tests/migration/: test_adapter_phase.py  test_api_deployment_phase.py  test_base_helpers.py  test_connector_phase.py  test_custom_tool_phase.py  test_files_phase.py  test_pipeline_phase.py  test_remap_table.py  test_tag_phase.py  test_tool_instance_phase.py  test_walker.py  test_workflow_endpoint_phase.py  test_workflow_phase.py
(+12 files in other folders)
