[project]
name = "unstract-client"
dynamic = ["version"]
description = "Python client for the Unstract LLM-powered structured data extraction platform"
authors = [
    {name = "Zipstack Inc", email = "devsupport@zipstack.com"},
]
dependencies = [
    "requests>=2.32.3",
    "tenacity>=8.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
urls = { Homepage = "https://unstract.com", Source = "https://github.com/Zipstack/unstract-python-client" }
license = {text = "MIT"}
keywords = ["unstract cli apps sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/unstract/api_deployments/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/unstract"]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.0",
    {include-group = "test"},
    {include-group = "lint"},
]
test = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-dotenv>=0.5.2",
    "pytest-cov>=5.0.0",
    "pytest-md-report>=0.6.2",
    "python-dotenv>=1.0.0",
]
lint = [
    "ruff>=0.15.0",
    "docutils~=0.20.1",
    "pre-commit>=4.0.0",
    "yamllint>=1.35.1",
    "mypy~=1.10.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
env_files = ["tests/.env"]
addopts = "-s"
log_level = "INFO"
log_cli = true
